# Pantograph

./: .editorconfig  .gitignore  CHANGELOG.md  COMPLIANCE-PR-TRACKER.md  Cargo.toml  DIAGNOSTICS-MODEL-LICENSE-USAGE.md  IMPLEMENTATION-PLAN-managed-binary-cross-platform.md  IMPLEMENTATION-PLAN-pantograph-binding-platform.md  IMPLEMENTATION-PLAN-pantograph-dependency-environment-node.md  IMPLEMENTATION-PLAN-pantograph-metrics-trace-hardening.md  IMPLEMENTATION-PLAN-pantograph-metrics-trace-spine.md  IMPLEMENTATION-PLAN-pantograph-milestone-4-technical-fit-selection.md  IMPLEMENTATION-PLAN-pantograph-milestone-5-workflow-adapter-integration.md  IMPLEMENTATION-PLAN-pantograph-milestone-6-diagnostics-documentation-rollout-safety.md  IMPLEMENTATION-PLAN-pantograph-native-library-and-language-binding-separation.md  IMPLEMENTATION-PLAN-pantograph-phase-2-parallel-demand-execution.md  IMPLEMENTATION-PLAN-pantograph-phase-3-kv-cache-implementation.md  IMPLEMENTATION-PLAN-pantograph-phase-5-follow-on-completion.md  IMPLEMENTATION-PLAN-pantograph-phase-5-real-workflow-event-contract.md  IMPLEMENTATION-PLAN-pantograph-phase-5-rustler-nif-testability-and-beam-verification.md  IMPLEMENTATION-PLAN-pantograph-phase-6-incremental-graph-execution.md  IMPLEMENTATION-PLAN-pantograph-phase-7-runtime-adapter-unification.md  IMPLEMENTATION-PLAN-pantograph-pumas-descriptor-first-resolution.md  IMPLEMENTATION-PLAN-pantograph-pumas-pinning-update.md  IMPLEMENTATION-PLAN-pantograph-pumas-v2-cutover.md  IMPLEMENTATION-PLAN-pantograph-python-runtime-separation.md  IMPLEMENTATION-PLAN-pantograph-resolve-only-hard-cutover.md  IMPLEMENTATION-PLAN-pantograph-runtime-redistributables-manager.md  IMPLEMENTATION-PLAN-pantograph-runtime-registry-technical-fit-selection.md  IMPLEMENTATION-PLAN-pantograph-rustler-send-safe-verification-unblock.md  IMPLEMENTATION-PLAN-pantograph-scheduler-v2.md  IMPLEMENTATION-PLAN-pantograph-standards-compliance-refactor-handoff.md  NOTICE  PLAN-pantograph-headless-embedding-framework.md  PLAN-pantograph-model-dependency-integration.md  PLAN-pantograph-workflow-diagnostics-view.md  PLAN-unified-node-registry.md  PROPOSAL-SVELTE-GRAPH-PACKAGE.md  PROPOSAL-builtin-node-registration.md  PROPOSAL-native-node-execution.md  (+25 more)
crates/inference/: Cargo.toml  README.md
crates/inference/audio/: README.md  stable_audio.py  worker.py
crates/inference/depth/: README.md  depth_estimation.py  worker.py
crates/inference/onnx/: README.md  worker.py
crates/inference/src/: README.md  config.rs  constants.rs  device.rs  embedding_runtime.rs  gateway.rs  gateway_tests.rs  lib.rs  process.rs  server.rs  server_tests.rs  types.rs
crates/inference/torch/: README.md  autoregressive.py  block_diffusion.py  worker.py  worker_runtime.py  worker_transformers.py
crates/node-engine/: Cargo.toml  README.md  plan.md
crates/node-engine/src/: README.md  builder.rs  composite_executor.rs  core_executor.rs  descriptor.rs  engine.rs  engine_tests.rs  error.rs  events.rs  extensions.rs  groups.rs  lib.rs  model_dependencies.rs  path_validation.rs  port_options.rs  registry.rs  types.rs  undo.rs  validation.rs
crates/pantograph-diagnostics-ledger/: Cargo.toml  README.md
crates/pantograph-diagnostics-ledger/src/: README.md  error.rs  event.rs  lib.rs  records.rs  repository.rs  schema.rs  sqlite.rs  tests.rs  timing.rs  util.rs
crates/pantograph-embedded-runtime/: Cargo.toml  README.md
crates/pantograph-embedded-runtime/src/: README.md  embedded_data_graph_execution.rs  embedded_edit_session_execution.rs  embedded_runtime_lifecycle.rs  embedded_workflow_graph_api.rs  embedded_workflow_host.rs  embedded_workflow_host_helpers.rs  embedded_workflow_service_api.rs  embedding_workflow.rs  host_runtime.rs  lib.rs  lib_tests.rs  managed_runtime_manager.rs  model_dependencies.rs  model_dependencies_tests.rs  model_dependency_activity.rs  model_dependency_descriptors.rs  model_dependency_python.rs  model_dependency_requirements.rs  node_execution.rs  node_execution_capabilities.rs  node_execution_diagnostics.rs  node_execution_diagnostics_tests.rs  node_execution_ledger.rs  node_execution_ledger_tests.rs  node_execution_tests.rs  python_runtime.rs  python_runtime_bridge.py  python_runtime_execution.rs  rag.rs  runtime_capabilities.rs  runtime_config.rs  runtime_extensions.rs  runtime_health.rs  runtime_recovery.rs  runtime_registry.rs  runtime_registry_controller.rs  runtime_registry_errors.rs  runtime_registry_lifecycle.rs  runtime_registry_observations.rs  (+9 more)
crates/pantograph-frontend-http-adapter/: Cargo.toml  README.md
crates/pantograph-frontend-http-adapter/src/: README.md  lib.rs
crates/pantograph-node-contracts/: Cargo.toml
crates/pantograph-node-contracts/src/: README.md  behavior.rs  composition.rs  lib.rs  migration.rs  tests.rs
crates/pantograph-runtime-attribution/: Cargo.toml
crates/pantograph-runtime-attribution/src/: README.md  error.rs  ids.rs  lib.rs  records.rs  repository.rs  schema.rs  sqlite.rs  sqlite_rows.rs  tests.rs  util.rs
crates/pantograph-runtime-identity/: Cargo.toml  README.md
crates/pantograph-runtime-identity/src/: README.md  lib.rs
crates/pantograph-runtime-registry/: Cargo.toml  README.md
crates/pantograph-runtime-registry/src/: README.md  admission.rs  lib.rs  lib_tests.rs  observation.rs  reclaim.rs  registry_queries.rs  reservation.rs  retention.rs  snapshot.rs  state.rs  technical_fit.rs  technical_fit_tests.rs  warmup.rs
crates/pantograph-rustler/: Cargo.toml  README.md
crates/pantograph-rustler/src/: README.md  binding_types.rs  callback_bridge.rs  elixir_data_graph_executor.rs  executor_nifs.rs  frontend_http_nifs.rs  lib.rs  lib_tests.rs  orchestration_execution_nifs.rs  (+9 more)
crates/pantograph-uniffi/: Cargo.toml  README.md  build.rs
crates/pantograph-workflow-service/: Cargo.toml  README.md
crates/workflow-nodes/: Cargo.toml  README.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: README.md  app_lifecycle.rs  app_setup.rs  app_tasks.rs  config.rs  constants.rs  main.rs  project_root.rs
(+1113 files in other folders)
