[workspace]
resolver = "2"
members = [
    "crates/inference",
    "crates/node-engine",
    "crates/pantograph-frontend-http-adapter",
    "crates/pantograph-workflow-service",
    "crates/workflow-nodes",
    "crates/pantograph-rustler",
    "crates/pantograph-uniffi",
    "src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "fs", "time"] }
async-trait = "0.1"
thiserror = "1"
log = "0.4"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
which = "7"
inventory = "0.3"

# Candle dependencies (shared for consistency)
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
tokenizers = "0.20"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"

# Python interop
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"

# Model management
pumas-library = { path = "../Pumas-Library/rust/crates/pumas-core" }
