[workspace]
resolver = "2"
members = [
    "crates/inference",
    "crates/node-engine",
    "crates/pantograph-node-contracts",
    "crates/pantograph-runtime-attribution",
    "crates/pantograph-runtime-identity",
    "crates/pantograph-runtime-registry",
    "crates/pantograph-embedded-runtime",
    "crates/pantograph-frontend-http-adapter",
    "crates/pantograph-workflow-service",
    "crates/workflow-nodes",
    "crates/pantograph-rustler",
    "crates/pantograph-uniffi",
    "src-tauri",
]
default-members = [
    "crates/inference",
    "crates/node-engine",
    "crates/pantograph-node-contracts",
    "crates/pantograph-runtime-attribution",
    "crates/pantograph-runtime-identity",
    "crates/pantograph-runtime-registry",
    "crates/pantograph-embedded-runtime",
    "crates/pantograph-frontend-http-adapter",
    "crates/pantograph-workflow-service",
    "crates/workflow-nodes",
    "crates/pantograph-uniffi",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MrScripty/Pantograph"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "fs", "time"] }
async-trait = "0.1"
thiserror = "1"
log = "0.4"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
which = "7"
inventory = "0.3"
graph-flow = "0.2"

# Candle dependencies (shared for consistency)
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
tokenizers = "0.20"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"

# Python interop
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"
flate2 = "1"
tar = "0.4"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tempfile = "3"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"

# Model management
pumas-library = { path = "../Pumas-Library/rust/crates/pumas-core" }
