[package]
name = "pantograph"
version = "0.0.0"
description = "Pantograph"
authors = ["you"]
edition = "2021"

[features]
default = ["backend-llamacpp", "backend-ollama", "backend-candle"]

# Inference backends - at least one must be enabled
backend-llamacpp = ["inference/backend-llamacpp"]
backend-ollama = ["inference/backend-ollama"]
backend-candle = [
    "inference/backend-candle",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:tokio-stream",
    "dep:tower-http",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Local crates
inference = { path = "../crates/inference", default-features = false }
node-engine = { path = "../crates/node-engine" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
log.workspace = true
futures-util.workspace = true
reqwest.workspace = true
which.workspace = true

# Tauri-specific dependencies
tauri = { version = "2.9.0", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Other app-specific dependencies
base64 = "0.22"
rig-core = { version = "0.28.0", features = ["derive"] }
lancedb = "0.22"
arrow-array = "56"
arrow-schema = "56"
env_logger = "0.11"
nucleo-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
zstd = "0.13"
tar = "0.4"
dirs = "6"
regex = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
bytes = "1"

# JavaScript engine for runtime validation (pure Rust, no external dependencies)
boa_engine = "0.21"

# Candle dependencies (optional, for backend-candle feature)
# Using git main branch for Qwen3 support (not in crates.io 0.9.1)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# Axum HTTP server - required for streaming proxy, optional features for backend-candle
axum = { workspace = true }
tower-http = { workspace = true, optional = true }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
