[package]
name = "pantograph"
version = "0.0.0"
description = "Pantograph"
authors = ["you"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
default-run = "pantograph"

[lints]
workspace = true

[features]
default = ["backend-llamacpp", "backend-ollama", "backend-candle"]

# Inference backends - at least one must be enabled
backend-llamacpp = ["inference/backend-llamacpp", "pantograph-embedded-runtime/backend-llamacpp"]
backend-ollama = ["inference/backend-ollama", "pantograph-embedded-runtime/backend-ollama"]
backend-pytorch = ["inference/backend-pytorch", "node-engine/pytorch-nodes", "pantograph-embedded-runtime/backend-pytorch"]
backend-audio = ["node-engine/audio-nodes", "pantograph-embedded-runtime/backend-audio"]
backend-candle = [
    "inference/backend-candle",
    "pantograph-embedded-runtime/backend-candle",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:tokio-stream",
    "dep:tower-http",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Local crates
inference = { path = "../crates/inference", default-features = false }
node-engine = { path = "../crates/node-engine", features = ["inference-nodes"] }
workflow-nodes = { path = "../crates/workflow-nodes", features = ["model-library"] }
pantograph-workflow-service = { path = "../crates/pantograph-workflow-service" }
pantograph-embedded-runtime = { path = "../crates/pantograph-embedded-runtime", default-features = false, features = ["backend-llamacpp", "backend-ollama", "backend-candle"] }
pantograph-runtime-identity = { path = "../crates/pantograph-runtime-identity" }
pantograph-runtime-registry = { path = "../crates/pantograph-runtime-registry" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
log.workspace = true
futures-util.workspace = true
reqwest.workspace = true
which.workspace = true
pumas-library.workspace = true

# Tauri-specific dependencies
tauri = { version = "2.9.0", features = [] }
tauri-plugin-dialog = "2"

# Other app-specific dependencies
rig-core = { version = "0.28.0", features = ["derive"] }
lancedb = "0.22"
arrow-array = "56"
arrow-schema = "56"
env_logger.workspace = true
chrono.workspace = true
zip.workspace = true
flate2.workspace = true
zstd.workspace = true
tar.workspace = true
dirs.workspace = true
regex = "1"
uuid.workspace = true
once_cell.workspace = true
parking_lot.workspace = true

# JavaScript engine for runtime validation (pure Rust, no external dependencies)
boa_engine = "0.21"

# Candle dependencies (optional, for backend-candle feature)
# Using git main branch for Qwen3 support (not in crates.io 0.9.1)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# Axum HTTP server - required for streaming proxy, optional features for backend-candle
axum = { workspace = true }
tower-http = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
