[package]
name = "node-engine"
version = "0.1.0"
edition = "2021"
description = "Graph-based workflow execution engine for Pantograph"
license = "MIT OR Apache-2.0"

[dependencies]
# Core graph execution
graph-flow = "0.2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compression for undo/redo snapshots
zstd = "0.13"

# Error handling
thiserror = "1"

# Logging
log = "0.4"

# HTTP client (for ollama-inference and other HTTP-based nodes)
reqwest = { workspace = true }

# Link-time collection of TaskMetadata descriptors
inventory = { workspace = true }

# UUID generation for orchestration execution IDs
uuid = { version = "1", features = ["v4"] }

# Optional: inference gateway for LLM node handlers
inference = { path = "../inference", optional = true, default-features = false }

[features]
# Enable built-in inference node handlers (llamacpp, llm, vision, unload-model)
inference-nodes = ["dep:inference"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
