[package]
name = "node-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Graph-based workflow execution engine for Pantograph"
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pantograph-runtime-identity = { path = "../pantograph-runtime-identity" }
# Core graph execution
graph-flow = "0.2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compression for undo/redo snapshots
zstd = "0.13"

# Error handling
thiserror = "1"

# Logging
log = "0.4"

# HTTP client (for ollama-inference and other HTTP-based nodes)
reqwest = { workspace = true }

# Link-time collection of TaskMetadata descriptors
inventory = { workspace = true }

# UUID generation for orchestration execution IDs
uuid = { version = "1", features = ["v4"] }

# Optional: inference gateway for LLM node handlers
inference = { path = "../inference", optional = true, default-features = false }

# Optional: streaming support for inference nodes
futures-util = { workspace = true, optional = true }

# Optional: PyO3 for in-process PyTorch inference
pyo3 = { workspace = true, optional = true }

[features]
# Enable built-in inference node handlers (llamacpp, llm, vision, unload-model)
inference-nodes = ["dep:inference", "dep:futures-util"]
# Enable PyTorch inference node handler (requires Python 3 + PyTorch at runtime)
pytorch-nodes = ["inference-nodes", "inference/backend-pytorch", "dep:pyo3"]
# Enable audio generation node handler (requires Python 3 + stable-audio-tools at runtime)
audio-nodes = ["dep:pyo3"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
