[package]
name = "node-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Graph-based workflow execution engine for Pantograph"
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pantograph-runtime-identity = { path = "../pantograph-runtime-identity" }
# Core graph execution
graph-flow.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Compression for undo/redo snapshots
zstd.workspace = true

# Error handling
thiserror.workspace = true

# Logging
log.workspace = true

# HTTP client (for ollama-inference and other HTTP-based nodes)
reqwest = { workspace = true }

# Link-time collection of TaskMetadata descriptors
inventory = { workspace = true }

# UUID generation for orchestration execution IDs
uuid.workspace = true

# Optional: inference gateway for LLM node handlers
inference = { path = "../inference", optional = true, default-features = false }

# Optional: streaming support for inference nodes
futures-util = { workspace = true, optional = true }

# Optional: PyO3 for in-process PyTorch inference
pyo3 = { workspace = true, optional = true }

[features]
# Enable built-in inference node handlers (llamacpp, llm, vision, unload-model)
inference-nodes = ["dep:inference", "dep:futures-util"]
# Enable PyTorch inference node handler (requires Python 3 + PyTorch at runtime)
pytorch-nodes = ["inference-nodes", "inference/backend-pytorch", "dep:pyo3"]
# Enable audio generation node handler (requires Python 3 + stable-audio-tools at runtime)
audio-nodes = ["dep:pyo3"]

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
