[package]
name = "pantograph-diagnostics-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Durable model and license diagnostics ledger for Pantograph"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
pantograph-runtime-attribution = { path = "../pantograph-runtime-attribution" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
