[package]
name = "pantograph-frontend-http-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Explicit frontend HTTP workflow host adapter for Pantograph modular GUI surfaces"
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pantograph-workflow-service = { path = "../pantograph-workflow-service" }
pantograph-runtime-identity = { path = "../pantograph-runtime-identity" }
async-trait.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
pumas-library = { workspace = true }

[dev-dependencies]
tokio.workspace = true
