[package]
name = "pantograph-node-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Canonical node, port, effective contract, and discovery semantics for Pantograph"

[lints]
workspace = true

[dependencies]
blake3 = "1.8.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
