[package]
name = "pantograph-runtime-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pantograph runtime registry state machine and reservation contracts"

[dependencies]
pantograph-runtime-identity = { path = "../pantograph-runtime-identity" }
serde.workspace = true
thiserror.workspace = true
