[package]
name = "pantograph-runtime-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Pantograph runtime registry state machine and reservation contracts"

[lints]
workspace = true

[dependencies]
pantograph-runtime-identity = { path = "../pantograph-runtime-identity" }
serde.workspace = true
thiserror.workspace = true
