[package]
name = "pantograph_rustler"
version = "0.1.0"
edition = "2021"
description = "Elixir/Erlang NIFs for Pantograph workflow engine via Rustler"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]
name = "pantograph_rustler"

[dependencies]
# Core workflow engine
node-engine = { path = "../node-engine", features = ["inference-nodes"] }

# Inference gateway for LLM node support in NIF
inference = { path = "../inference", features = ["std-process", "backend-llamacpp"] }

# Workflow node descriptors (linked to include inventory::submit! statics)
workflow-nodes = { path = "../workflow-nodes", default-features = false, features = ["model-library"] }

# Erlang NIF bindings
rustler = "0.34"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"

# Graph-flow for Context type
graph-flow = "0.2"

# Serialization for complex types (JSON marshaling at NIF boundary)
serde_json = "1"

# Model management
pumas-library = { workspace = true }

# Logging
log = "0.4"
