[package]
name = "pantograph_rustler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Elixir/Erlang NIFs for Pantograph workflow engine via Rustler"
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
name = "pantograph_rustler"

[dependencies]
# Core workflow engine
node-engine = { path = "../node-engine", features = ["inference-nodes"] }
pantograph-workflow-service = { path = "../pantograph-workflow-service" }
pantograph-frontend-http-adapter = { path = "../pantograph-frontend-http-adapter", optional = true }

# Inference gateway for LLM node support in NIF
inference = { path = "../inference", features = ["std-process", "backend-llamacpp"] }

# Workflow node descriptors (linked to include inventory::submit! statics)
workflow-nodes = { path = "../workflow-nodes", default-features = false, features = ["model-library"] }

# Erlang NIF bindings
rustler = "0.34"

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Graph-flow for Context type
graph-flow.workspace = true

# Serialization for complex types (JSON marshaling at NIF boundary)
serde.workspace = true
serde_json.workspace = true

# Model management
pumas-library = { workspace = true }

# Logging
log.workspace = true

[features]
default = []
frontend-http = ["dep:pantograph-frontend-http-adapter"]
