[package]
name = "pantograph-uniffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings for Pantograph workflow engine - cross-language FFI"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "pantograph_uniffi"

[dependencies]
# Core workflow engine
node-engine = { path = "../node-engine" }

# UniFFI runtime (tokio feature for async method export)
uniffi = { version = "0.28", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

# Graph-flow for Context type
graph-flow = "0.2"

# Serialization (JSON marshaling at FFI boundary)
serde_json = "1"

# Error handling
thiserror = "1"

[[bin]]
name = "pantograph-uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["cli"]

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }

[features]
default = []
cli = ["uniffi/cli"]
