[package]
name = "pantograph-uniffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "UniFFI bindings for Pantograph workflow engine - cross-language FFI"
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "pantograph_headless"

[dependencies]
# Core workflow engine
node-engine = { path = "../node-engine" }
pantograph-workflow-service = { path = "../pantograph-workflow-service" }
pantograph-embedded-runtime = { path = "../pantograph-embedded-runtime", default-features = false, optional = true }
pantograph-frontend-http-adapter = { path = "../pantograph-frontend-http-adapter", optional = true }
inference = { path = "../inference", default-features = false, optional = true }

# UniFFI runtime (tokio feature for async method export)
uniffi = { version = "0.28", features = ["tokio"] }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Graph-flow for Context type
graph-flow.workspace = true

# Serialization (JSON marshaling at FFI boundary)
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Model management
pumas-library = { workspace = true }

[[bin]]
name = "pantograph-uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["cli"]

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }

[features]
default = ["embedded-runtime", "backend-ollama", "backend-candle"]
cli = ["uniffi/cli"]
runtime-deps = ["dep:pantograph-embedded-runtime", "dep:inference"]
embedded-runtime = ["backend-llamacpp"]
backend-llamacpp = [
    "runtime-deps",
    "pantograph-embedded-runtime/backend-llamacpp",
    "inference/backend-llamacpp",
]
backend-ollama = [
    "embedded-runtime",
    "pantograph-embedded-runtime/backend-ollama",
    "inference/backend-ollama",
]
backend-pytorch = [
    "embedded-runtime",
    "pantograph-embedded-runtime/backend-pytorch",
    "inference/backend-pytorch",
]
backend-audio = [
    "embedded-runtime",
    "pantograph-embedded-runtime/backend-audio",
]
backend-candle = [
    "embedded-runtime",
    "pantograph-embedded-runtime/backend-candle",
    "inference/backend-candle",
]
frontend-http = ["dep:pantograph-frontend-http-adapter"]
