[package]
name = "pantograph-workflow-service"
version = "0.1.0"
edition = "2021"
description = "Host-agnostic workflow application services for Pantograph"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }
parking_lot.workspace = true

# Shared framework/domain crates
node-engine = { path = "../node-engine" }
workflow-nodes = { path = "../workflow-nodes", features = ["model-library"] }
pantograph-runtime-identity = { path = "../pantograph-runtime-identity" }

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
