[package]
name = "pantograph-workflow-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Host-agnostic workflow application services for Pantograph"
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
blake3 = "1.8.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
sysinfo = "0.32"

# Shared framework/domain crates
node-engine = { path = "../node-engine" }
workflow-nodes = { path = "../workflow-nodes", features = ["model-library"] }
pantograph-runtime-attribution = { path = "../pantograph-runtime-attribution" }
pantograph-runtime-identity = { path = "../pantograph-runtime-identity" }
pantograph-node-contracts = { path = "../pantograph-node-contracts" }
pantograph-diagnostics-ledger = { path = "../pantograph-diagnostics-ledger" }

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
