[package]
name = "workflow-nodes"
version = "0.1.0"
edition = "2021"
description = "Task/node implementations for Pantograph workflow engine"

[dependencies]
# Framework
node-engine = { path = "../node-engine" }
graph-flow = "0.2"

# Model management (optional — enable via `model-library` feature)
pumas-library = { workspace = true, optional = true }

# Async/Serialization
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "time"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
log = "0.4"

# Link-time collection of TaskMetadata descriptors
inventory = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["desktop"]
desktop = []
model-library = ["dep:pumas-library"]
